update chat response